2001-07-11  Elliot Glaysher  <eglayshe@umich.edu>

	* AUTHORS: Updated for my new email.
	* MANIFEST.SKIP: Made sure it skips more debian build crap (MORE, not
	all)
	* debian/rules: Actually get packages that build more (doesn't fully
	work yet)
	* debian/netcomics.manpages: Putting manpages in packages is usually
	a good idea :-P

2001-07-08  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomicsrc: Removed reference to default download directory so
	that netcomicsrc doesn't need to be updated during build process.
	* INSTALL: Updated to work with new Makefile.PL for CPAN.
	* README: Updated to work with new Makefile.PL for CPAN.
	* comicpage: Updated to work with new Makefile.PL for CPAN.
	* netcomics: Updated to work with new Makefile.PL for CPAN.
	* netcomics.spec: Updated to work with new Makefile.PL for CPAN.
	* show_comics: Updated to work with new Makefile.PL for CPAN.
	* debian/netcomics-modules.dirs: Updated to work with new
	Makefile.PL for CPAN.
	* debian/netcomics-modules.files: Updated to work with new
	Makefile.PL for CPAN.
	* debian/netcomics.conffiles: Updated to work with new Makefile.PL
	for CPAN.
	* debian/netcomics.dirs: Updated to work with new Makefile.PL for
	CPAN.
	* debian/netcomics.files: Updated to work with new Makefile.PL for
	CPAN.
	* debian/rules: Updated to work with new Makefile.PL for CPAN.
	* Makefile: Removed file; It's now generated by Makefile.PL
	* Makefile.PL: Added file; Perl script that generates a Makefile.
	* MANIFEST: Added file; Used by the generated Makefile to specify
	the files to distribute
	* MANIFEST.SKIP: Added file; Used by the generated Makefile to specify
	the files to not distribute

	* contrib/perlreflectiontest: Added this file to make sure this
	code (which we'll need for module OO-ization) isn't lost.
	* doc/netcomics.pod (FILES): Added netcomicsrc files.
	(SEE ALSO): added reference to comicpage.

2001-07-06  Elliot Glaysher  <nuriko.chan@home.com>
