@@ -1,1 +1,1 @@
-/usr/lib/perl5/Netcomics/etc/netcomicsrc
+/usr/share/perl/5.6.1/Netcomics/etc/netcomicsrc
